--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   window_location_href: ^1.0.0
   url_launcher: ^6.1.4
   font_awesome_flutter: ^10.3.0
+  web_socket_channel: ^2.4.5
 
 dev_dependencies:
   flutter_test:
