--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   http: ^1.1.0
   provider: ^6.1.1
   get_it: ^7.6.4
-  file_picker: ^6.1.1
+  file_picker: ^8.0.6
   collection: ^1.16.0
   path_provider: ^2.0.0
   intl: ^0.19.0
@@ -47,7 +47,7 @@ dependencies:
   window_location_href: ^1.0.0
   url_launcher: ^6.1.4
   font_awesome_flutter: ^10.3.0
-  web_socket_channel: ^2.4.5
+  socket_io_client: ^2.0.3+1
 
 dev_dependencies:
   flutter_test:
@@ -58,7 +58,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.1
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
